--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.45",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -18,6 +19,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.22",
+    "ai": "^3.3.6",
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +33,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "npm-run-path": "^5.3.0",
+    "openai": "^4.55.5",
     "path-key": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
